// Vitest Snapshot v1

exports[`Avatar > letter avatar > should render the avatar as text 1`] = `
<div>
  <div
    class="css-1a4hhck-StyledContainer erijylh4"
  >
    <div
      class=" css-pfc2yb-StyledStatus erijylh2"
    >
      <div
        class="css-y4cyfh-StyledBadge erijylh0"
      />
      <div
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault  erijylh1 css-rtd540-MuiAvatar-root-StyledAvatar"
      >
        AB
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar > should render correctly 1`] = `
<div>
  <div
    class="css-1a4hhck-StyledContainer erijylh4"
  >
    <div
      class=" css-pfc2yb-StyledStatus erijylh2"
    >
      <div
        class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault  erijylh1 css-rtd540-MuiAvatar-root-StyledAvatar"
      >
        <div
          class="css-du18qm"
          name="User"
        >
          <svg
            focusable="false"
            height="12"
            viewBox="0 0 16 16"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M9.6 8.7A4.49656 4.49656 0 0 0 8.03809 0Q8.019-.00007 8 0a4.481 4.481 0 0 0-4.5 4.46194q-.00009.019 0 .03808A4.563 4.563 0 0 0 6.4 8.7 7.687 7.687 0 0 0 .5 16h1a6.487 6.487 0 0 1 6.474-6.5H8a6.487 6.487 0 0 1 6.5 6.474V16h1a7.493 7.493 0 0 0-5.9-7.3zM4.5 4.5A3.543 3.543 0 0 1 8 1a3.543 3.543 0 0 1 3.5 3.5A3.543 3.543 0 0 1 8 8a3.543 3.543 0 0 1-3.5-3.5z"
              fill="var(--colors-atmo1)"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
